# CppND-Capstone-Object-Detection

./: CMakeLists.txt  README.md
include/: buffer.h  image_capture.h  image_writer.h  media_capture.h  media_writer.h  object_detector.h  video_capture.h  video_process.h  video_writer.h
src/: image_capture.cpp  image_writer.cpp  main.cpp  media_capture.cpp  media_writer.cpp  object_detector.cpp  video_capture.cpp  video_process.cpp  video_writer.cpp
